<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.niu.cs.z1764108.calculator.MainActivity">

    <TextView
        android:text="@string/num2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <TextView
        android:text="@string/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="74dp"
        android:id="@+id/textView6"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:text="@string/addLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:id="@+id/addButton"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/divideLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/divideButton"
        android:layout_alignBaseline="@+id/multiplyButton"
        android:layout_alignBottom="@+id/multiplyButton"
        android:layout_alignRight="@+id/resultText"
        android:layout_alignEnd="@+id/resultText" />

    <Button
        android:text="@string/clearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:id="@+id/clearButton"
        android:layout_below="@+id/multiplyButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/num1Label"
        android:layout_width="wrap_content"
        android:id="@+id/textView4"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/num2Text"
        android:hint="second number"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/num1Text"
        android:layout_alignStart="@+id/num1Text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/num1Text"
        android:hint="first number"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/subtractButton"
        android:layout_toEndOf="@+id/subtractButton" />

    <Button
        android:text="@string/multiplyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/multiplyButton"
        android:layout_alignBaseline="@+id/subtractButton"
        android:layout_alignBottom="@+id/subtractButton"
        android:layout_toRightOf="@+id/subtractButton"
        android:layout_toEndOf="@+id/subtractButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultText"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:hint="result is here"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />

    <Button
        android:text="@string/subtractLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subtractButton"
        android:layout_alignBaseline="@+id/addButton"
        android:layout_alignBottom="@+id/addButton"
        android:layout_toRightOf="@+id/addButton"
        android:layout_toEndOf="@+id/addButton" />
</RelativeLayout>
